welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: ';' expected but ',' found.
	while(!estSurBiscuit()) {avance(),  x=x+1}
                                         ^